flacco_1.5:
- barrier trees:
-- fixed the problems which limited the bt features to 2D
- we have started to work on flaccoGUI -- a graphical user interface for our package:
-- the most recent (online) version can be found here: https://flaccogui.shinyapps.io/flaccogui
-- one can start the app from within the package by running `runFlaccoGUI`

flacco_1.4:
- minor bug fixes

flacco_1.3:
- ela_local:
-- made L-BFGS-B the default local optimizer
-- use lower / upper bounds of the feature object as bounds of the L-BFGS-B
-- local search algorithm used to maximize the problems (it's fixed now)
- updated tests due to interface changes in testthat and checkmate

flacco_1.2:
- converted assert* into test* - due to update of checkmate

flacco_1.1:
- barrier trees:
-- fixed a bug in feature computation: ratio of levels and nodes should only be taken for the maximum number of levels
-- added number of leaves as a feature
- replace createInitialDesign by createInitialSample as that name should be more intuitive and less misleading
- createInitialSample stores the attributes lower and upper, which will be used by createFeatureObject

flacco_1.0:
- initial release to CRAN