@@ -41,6 +41,6 @@ Suggests:
     testthat
 LazyData: yes
 ByteCompile: yes
-Version: 1.5
-Date: 2017-04-28
+Version: 1.6
+Date: 2017-05-04
 RoxygenNote: 6.0.1
